--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  background-color: aliceblue;
+}
+
+.app {
+  background-color: #252d4a;
+  border-radius: 15px;
+  padding: 20px;
+  margin: 150px 100px;
+  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.review-section{
+  background-color: aqua;
+  border: 2px solid black;
+  padding: 16px;
+  width: 20%;
+  height: inherit;
+  margin: 80px;
+  border-radius: 15px;
+}
+.attempt-section {
+  border: 2px solid black;
+  padding: 32px;
+  width: 70%;
+  color: white;
+  border-radius: 15px;
+}
+
+.score-section {
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+  color: white;
+  height: 100px;
+}
+
+/* QUESTION SECTION */
+.question-section {
+  width: 100%;
+  position: relative;
+}
+
+.question-count {
+  margin-bottom: 20px;
+}
+
+.question-count span {
+  font-size: 28px;
+}
+
+.question-text {
+  margin-bottom: 12px;
+}
+
+.timer-text {
+  background: rgb(230, 153, 12);
+  padding: 15px;
+  margin-top: 20px;
+  margin-right: 20px;
+  border: 5px solid rgb(255, 189, 67);
+  border-radius: 15px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* ANSWERS SECTION */
+.answer-section {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+button {
+  width: 100%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #252d4a;
+  border-radius: 15px;
+  display: flex;
+  padding: 5px;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: 5px solid #234668;
+  margin: 5px 0px;
+  cursor: pointer;
+}
+
+.correct {
+  background-color: #2f922f;
+}
+
+.incorrect {
+  background-color: #ff3333;
+}
+
+button:hover {
+  background-color: #555e7d;
+}
+
+button:focus {
+  outline: none;
+}
+
+button svg {
+  margin-right: 5px;
+}
+/* QUESTION NAV SECTION */
+.question_nav {
+  display: flex;
+  justify-content: space-between;
+}
+.question_nav a{
+  background-color: #FF5976;
   color: white;
+  padding: 5px 16px;
+  margin: 20px auto 0px;
+  cursor: pointer;
+  font-weight: 800;
+  border-radius: 7px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.question_nav a:hover {
+  background-color: white;
+  color: #FF5976;
 }
